Update 'zppu38zrr-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe:097df49cf9f9ae558b63fc8adceb0d68b596ead0@sha256:fb449a7f7d5574453c1fef123f59d7f8d3cdd69637bbbaf32516cc1747f76dc5

--- a/components/zppu38zrr-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/zppu38zrr-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zppu38zrr-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:097df49cf9f9ae558b63fc8adceb0d68b596ead0@sha256:fb449a7f7d5574453c1fef123f59d7f8d3cdd69637bbbaf32516cc1747f76dc5
+          name: container-image
